--- a/src/index.css
+++ b/src/index.css
@@ -1,66 +1,73 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-.main_div{
+body {
   width: 100%;
   height: 100vh;
-  background-color: rgb(150, 185, 54);
+  background-color: rgb(49, 138, 215);
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
-  text-align: center;
+  background-image: linear-gradient(#fcf5f5, #eff4fd);
 }
-.center_div{
-  width: 45%;
-  height: 60vh;
-  background-color: wheat;
-  box-shadow: 5px 5px 25px -5px black;
-  border-radius: 15px;
+
+.main-div {
+  width: 50vw;
+  padding: 50px;
+  background-color: rgb(255, 255, 255);
+  border-radius: 10px;
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 1px 0px,
+    rgba(17, 17, 26, 0.1) 0px 8px 8px;
+}
+
+h1 {
+  text-align: center;
+  font-family: "Bitter", serif;
+  text-transform: capitalize;
+  font-size: 32px;
+  letter-spacing: 5;
+  word-spacing: 5px;
+  margin-bottom: 50px;
+  color: #2c3148;
+}
+
+.main-heading {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-h1{
-  color: rgb(17, 17, 17);
-  background: transparent;
-  padding: 6px 0 2px 0;
-  margin-bottom: 10px;
-  width:  50%;
-  box-shadow: 5px 5px 15px -5px black;
-}
-input{
-  text-align: center;
-  height: 30px;
-  top: 10px;
-  border: none;
-  background: transparent;
-  font-size: 20px;
-  font-weight: 500;
-  width: 60%;
-  border-bottom: 2px rgb(185, 74, 207);
-  outline: none;
-}
-button{
-  min-height: 40px;
-  border-radius: 5%;
-  background-color: rgb(101, 20, 177);
-  color: aliceblue;
-  font-size: 20px;
-  border: none;
-  outline: none;
-  padding: 0 15px;
   margin-top: 30px;
-  box-shadow: 5px 5px 15px -5px black;
+  padding: 20px 0 20px 20px;
+  background: #f1f4ff;
+  border-radius: 5px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0 1px 4px;
 }
-.button_green :hover{
-  color: rgb(21, 241, 51);
+
+.main-heading h3 {
+  margin-left: 30px;
+  font-family: "Mate SC", serif;
+  color: #303243;
+  font-family: "Raleway", sans-serif;
+  word-spacing: 1px;
+  letter-spacing: 1px;
+  font-weight: 600;
+  font-size: 18px;
 }
-.button_red:hover{
-  color: rgb(204, 44, 44);
+.main-heading p {
+  cursor: pointer;
+  border-radius: 50%;
+  box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,
+    rgba(17, 17, 26, 0.1) 0px 8px 24px, rgba(17, 17, 26, 0.1) 0px 16px 56px;
+  background: #fff;
+  padding: 7px;
 }
-.btn_div{
-  width: 100;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.answers {
+  padding: 30px 20px 40px 20px;
+  font-family: "Raleway", sans-serif;
+  font-size: 15px;
+  word-spacing: 2px;
+  font-weight: 400;
+  line-height: 1.7;
+  background: #fcf5f5;
+  color: rgb(40, 37, 53);
 }
